@@ -1,3 +1,8 @@
+2006-01-12  Miguel de Icaza  <miguel@novell.com>
+
+	* PeerCred.cs: Turn PeerCredData into a toplevel class and make it
+	internal, so it can be used from Mono.Unix.PeerCred.
+
 2006-01-06  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* Catalog.cs: s/libintl/intl/g, since intl.dll is used by GTK+ on Windows,
